app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: tarea-kubernetes
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
