deployment-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: tarea-kubernetes
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: tarea-kubernetes
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: nginx:latest
          ports:
            - containerPort: 80
